nginx-ingress/default-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-backend
  annotations:
    kubernetes.io/ingress.class: "public"
spec:
  defaultBackend:
    service:
      name: default-backend
      port:
        number: 80
